--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -5,21 +5,21 @@ pip-tools
 
 
 ## Linter tools
-mypy
-flake8-isort
+#mypy
+#flake8-isort
 pylint
-docutils
-pygments
-bandit
+#docutils
+#pygments
+#bandit
 black;python_version>="3.6"
 
 ## Test tools
-tox
+#tox
 asynctest
-green
-coveralls
+#green
+#coveralls
 pytest
-nose2
+#nose2
 
 # Pypi
 twine
