--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,10 +7,8 @@
 alabaster==0.7.12
     # via sphinx
 appdirs==1.4.4
-    # via
-    #   black
-    #   virtualenv
-astroid==2.5.1
+    # via black
+astroid==2.5.2
     # via pylint
 asynctest==0.13.0
     # via -r requirements-dev.in
@@ -24,8 +22,6 @@ babel==2.9.0
     #   -r requirements.txt
     #   flask-babel
     #   sphinx
-bandit==1.7.0
-    # via -r requirements-dev.in
 black==20.8b1 ; python_version >= "3.6"
     # via -r requirements-dev.in
 bleach==3.3.0
@@ -50,31 +46,17 @@ click==7.1.2
     #   flask
     #   pip-tools
 colorama==0.4.4
-    # via
-    #   green
-    #   twine
-coverage==5.5
-    # via
-    #   coveralls
-    #   green
-    #   nose2
-coveralls==3.0.1
-    # via -r requirements-dev.in
-cryptography==3.4.6
+    # via twine
+cryptography==3.4.7
     # via secretstorage
-distlib==0.3.1
-    # via virtualenv
 dnspython==2.1.0
     # via
     #   -r requirements.txt
     #   email-validator
 doc8==0.8.1
     # via -r requirements-dev.in
-docopt==0.6.2
-    # via coveralls
 docutils==0.16
     # via
-    #   -r requirements-dev.in
     #   doc8
     #   readme-renderer
     #   restructuredtext-lint
@@ -82,14 +64,6 @@ docutils==0.16
     #   sphinx
 email-validator==1.1.2
     # via -r requirements.txt
-filelock==3.0.12
-    # via
-    #   tox
-    #   virtualenv
-flake8-isort==4.0.0
-    # via -r requirements-dev.in
-flake8==3.9.0
-    # via flake8-isort
 flask-babel==2.0.0
     # via -r requirements.txt
 flask-wtf==0.14.3
@@ -99,13 +73,7 @@ flask==1.1.2
     #   -r requirements.txt
     #   flask-babel
     #   flask-wtf
-gitdb==4.0.5
-    # via gitpython
-gitpython==3.1.14
-    # via bandit
-green==3.2.5
-    # via -r requirements-dev.in
-gunicorn==20.0.4
+gunicorn==20.1.0
     # via -r requirements.txt
 idna==2.10
     # via
@@ -114,16 +82,14 @@ idna==2.10
     #   requests
 imagesize==1.2.0
     # via sphinx
-importlib-metadata==3.7.3
+importlib-metadata==3.9.0
     # via
     #   keyring
     #   twine
 iniconfig==1.1.1
     # via pytest
 isort==5.8.0
-    # via
-    #   flake8-isort
-    #   pylint
+    # via pylint
 itsdangerous==1.1.0
     # via
     #   -r requirements.txt
@@ -140,14 +106,12 @@ jinja2==2.11.3
     #   flask-babel
     #   pybadges
     #   sphinx
-keyring==23.0.0
+keyring==23.0.1
     # via twine
 lazy-object-proxy==1.6.0
     # via astroid
 libgravatar==0.2.5
     # via -r requirements.txt
-lxml==4.6.3
-    # via green
 markdown==3.3.4
     # via -r requirements.txt
 markupsafe==1.1.1
@@ -156,23 +120,14 @@ markupsafe==1.1.1
     #   jinja2
     #   wtforms
 mccabe==0.6.1
-    # via
-    #   flake8
-    #   pylint
+    # via pylint
 mypy-extensions==0.4.3
-    # via
-    #   black
-    #   mypy
-mypy==0.812
-    # via -r requirements-dev.in
-nose2==0.10.0
-    # via -r requirements-dev.in
+    # via black
 packaging==20.9
     # via
     #   bleach
     #   pytest
     #   sphinx
-    #   tox
 pathspec==0.8.1
     # via black
 pbr==5.5.1
@@ -184,26 +139,15 @@ pip-tools==6.0.1
 pkginfo==1.7.0
     # via twine
 pluggy==0.13.1
-    # via
-    #   pytest
-    #   tox
+    # via pytest
 py==1.10.0
-    # via
-    #   pytest
-    #   tox
-pyaml==20.4.0
-    # via -r requirements.txt
+    # via pytest
 pybadges==2.2.1
     # via -r requirements-dev.in
-pycodestyle==2.7.0
-    # via flake8
 pycparser==2.20
     # via cffi
-pyflakes==2.3.0
-    # via flake8
 pygments==2.8.1
     # via
-    #   -r requirements-dev.in
     #   doc8
     #   readme-renderer
     #   sphinx
@@ -215,18 +159,13 @@ pyparsing==2.4.7
     # via packaging
 pytest==6.2.2
     # via -r requirements-dev.in
-python-dotenv==0.15.0
+python-dotenv==0.16.0
     # via -r requirements.txt
 pytz==2021.1
     # via
     #   -r requirements.txt
     #   babel
     #   flask-babel
-pyyaml==5.4.1
-    # via
-    #   -r requirements.txt
-    #   bandit
-    #   pyaml
 readme-renderer==29.0
     # via twine
 redis==3.5.3
@@ -238,7 +177,6 @@ requests-toolbelt==0.9.1
 requests==2.25.1
     # via
     #   -r requirements.txt
-    #   coveralls
     #   pybadges
     #   requests-toolbelt
     #   sphinx
@@ -253,16 +191,10 @@ secretstorage==3.3.1
     # via keyring
 six==1.15.0
     # via
-    #   bandit
     #   bleach
     #   doc8
-    #   nose2
     #   readme-renderer
     #   sphinxcontrib-httpdomain
-    #   tox
-    #   virtualenv
-smmap==3.0.5
-    # via gitdb
 snowballstemmer==2.1.0
     # via sphinx
 sphinx-rtd-theme==0.5.1
@@ -287,40 +219,25 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
     # via sphinx
 stevedore==3.3.0
-    # via
-    #   bandit
-    #   doc8
-testfixtures==6.17.1
-    # via flake8-isort
+    # via doc8
 toml==0.10.2
     # via
     #   black
     #   pep517
     #   pylint
     #   pytest
-    #   tox
-tox==3.23.0
-    # via -r requirements-dev.in
 tqdm==4.59.0
     # via twine
 twine==3.4.1
     # via -r requirements-dev.in
 typed-ast==1.4.2
-    # via
-    #   black
-    #   mypy
+    # via black
 typing-extensions==3.7.4.3
-    # via
-    #   black
-    #   mypy
-unidecode==1.2.0
-    # via green
+    # via black
 urllib3==1.26.4
     # via
     #   -r requirements.txt
     #   requests
-virtualenv==20.4.3
-    # via tox
 webencodings==0.5.1
     # via bleach
 werkzeug==1.0.1
